params added to user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <%= button_to "Logut", destroy_user_session_path, method: :delete%>
+    
     <%= yield %>
   </body>
 </html>
