--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,15 @@
   </head>
 
   <body>
+  <div class='container'>
+    <%flash.each do |key, value|%>
+      <div class='alert alert-<%= key %>'><%= value%></div>
+    <% end %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= button_to "Logut", destroy_user_session_path, method: :delete%>
-    
+
     <%= yield %>
+    </div>
   </body>
 </html>
